--- a/templates/css/landing_page.css
+++ b/templates/css/landing_page.css
@@ -23,6 +23,9 @@ a {
   justify-content: space-between;
   padding: 32px;
 }
+.container .navbar #hamburger {
+  display: none;
+}
 .container .navbar .left_side .logo {
   width: 80px;
 }
@@ -560,4 +563,46 @@ a {
   border: 1px solid #ef8b15;
   width: 50px;
   border-radius: 50px;
+}
+
+@media screen and (max-width: 1024px) {
+  .container .navbar {
+    position: relative;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 16px;
+  }
+  .container .navbar #hamburger {
+    font-size: 26px;
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+  .container .navbar .left_side {
+    display: none;
+  }
+  .container .navbar .right_side {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    height: 100vh;
+    width: 300px;
+    background-color: white;
+    flex-direction: column;
+    padding: 20px;
+    display: none;
+    gap: 20px;
+    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  .container .navbar .right_side a {
+    padding: 12px 0;
+  }
+  .container .navbar .right_side button {
+    width: 100%;
+    margin-top: 20px;
+  }
+  .container .navbar .right_side.active {
+    display: flex;
+  }
 }/*# sourceMappingURL=landing_page.css.map */
