style: slicing responsive for screen 430px

--- a/templates/css/landing_page.css
+++ b/templates/css/landing_page.css
@@ -585,7 +585,8 @@ a {
     position: absolute;
     top: 70px;
     left: 0;
-    height: 100vh;
+    height: -moz-max-content;
+    height: max-content;
     width: 300px;
     background-color: white;
     flex-direction: column;
@@ -594,6 +595,10 @@ a {
     gap: 20px;
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    display: flex;
   }
   .container .navbar .right_side a {
     padding: 12px 0;
@@ -604,5 +609,349 @@ a {
   }
   .container .navbar .right_side.active {
     display: flex;
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container #aboutUs .logo_section {
+    width: 110px;
+  }
+  .container #aboutUs .bridge_ctr {
+    padding-left: 13px;
+    padding-right: 13px;
+  }
+  .container #aboutUs .bridge_ctr .left_side .bridge_img {
+    width: 182px;
+  }
+  .container #aboutUs .bridge_ctr .right_side {
+    width: 247px;
+  }
+  .container #aboutUs .bridge_ctr .right_side .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 19px;
+    letter-spacing: -2.5%;
+  }
+  .container #aboutUs .bridge_ctr .right_side .description {
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 0%;
+  }
+  .container #aboutUs .tailored_ctr .up_side {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .container #aboutUs .tailored_ctr .up_side .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: -2.5%;
+    text-align: center;
+  }
+  .container #aboutUs .tailored_ctr .up_side .description {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #aboutUs .tailored_ctr .down_side {
+    align-items: center;
+    flex-direction: column;
+    margin-left: 12px;
+    margin-right: 12px;
+    gap: 25px;
+  }
+  .container #aboutUs .tailored_ctr .down_side .left_side .benefits_ctr {
+    width: 201px;
+  }
+  .container #aboutUs .tailored_ctr .down_side .left_side .benefits_ctr .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 30px;
+    letter-spacing: -2.5%;
+    text-align: center;
+  }
+  .container #aboutUs .tailored_ctr .down_side .left_side .benefits_ctr .description {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #aboutUs .tailored_ctr .down_side .right_side .benefits_ctr {
+    width: 201px;
+  }
+  .container #aboutUs .tailored_ctr .down_side .right_side .benefits_ctr .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 30px;
+    letter-spacing: -2.5%;
+    text-align: center;
+  }
+  .container #aboutUs .tailored_ctr .down_side .right_side .benefits_ctr .description {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #aboutUs .vismis_ctr .up_side {
+    flex-direction: column;
+  }
+  .container #aboutUs .vismis_ctr .up_side .monas_ctr {
+    width: 100%;
+  }
+  .container #aboutUs .vismis_ctr .up_side .monas_ctr .monas_img {
+    width: 100%;
+  }
+  .container #aboutUs .vismis_ctr .up_side .monas_ctr .logo_section {
+    display: none;
+  }
+  .container #aboutUs .vismis_ctr .up_side .vision_ctr {
+    border: none;
+    box-shadow: none;
+    width: 100%;
+    padding: 80px 0;
+  }
+  .container #aboutUs .vismis_ctr .up_side .vision_ctr .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 62px;
+    letter-spacing: -1px;
+    text-align: center;
+    text-transform: capitalize;
+  }
+  .container #aboutUs .vismis_ctr .up_side .vision_ctr .description {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #aboutUs .vismis_ctr .down_side {
+    flex-direction: column;
+  }
+  .container #aboutUs .vismis_ctr .down_side .mission_ctr {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    padding: 80px 0;
+  }
+  .container #aboutUs .vismis_ctr .down_side .mission_ctr .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 62px;
+    letter-spacing: -1px;
+    text-align: center;
+    text-transform: capitalize;
+  }
+  .container #aboutUs .vismis_ctr .down_side .mission_ctr .description {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #aboutUs .vismis_ctr .down_side .yunani_ctr {
+    width: 100%;
+  }
+  .container #whytdm .up_side {
+    flex-direction: column;
+  }
+  .container #whytdm .up_side .left_side {
+    width: 280px;
+  }
+  .container #whytdm .up_side .left_side .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 40px;
+    letter-spacing: -2.5%;
+    text-align: center;
+  }
+  .container #whytdm .up_side .left_side .description {
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #whytdm .up_side .right_side .whytdm_img {
+    width: 380px;
+  }
+  .container #whytdm .down_side {
+    flex-direction: column;
+  }
+  .container #gallery {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .container #gallery .sentence_ctr {
+    display: block;
+  }
+  .container #gallery .sentence_ctr .left_side {
+    width: 100%;
+  }
+  .container #gallery .sentence_ctr .left_side .title {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+  }
+  .container #gallery .sentence_ctr .left_side .description {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 100%;
+    letter-spacing: 0%;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 {
+    gap: 3px;
+    justify-content: start;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 .left_side {
+    justify-content: start;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 .left_side img {
+    width: 100px;
+    display: block;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 .center_side {
+    justify-content: start;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 .center_side img {
+    width: 85px;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 .right_side {
+    display: block;
+    justify-content: start;
+  }
+  .container #gallery .sentence_ctr .gallery_ctr_1 .right_side img {
+    width: 100px;
+  }
+  .container #gallery .gallery_ctr_2 {
+    gap: 3px;
+  }
+  .container #gallery .gallery_ctr_2 .gallery_6 {
+    width: 90px;
+  }
+  .container #gallery .gallery_ctr_2 .gallery_7 {
+    width: 90px;
+  }
+  .container #gallery .gallery_ctr_2 .gallery_8 {
+    width: 199px;
+  }
+  .container #gallery .gallery_ctr_3 {
+    gap: 3px;
+  }
+  .container #gallery .gallery_ctr_3 .left_side img {
+    width: 200px;
+  }
+  .container #gallery .gallery_ctr_3 .center_side img {
+    width: 90px;
+  }
+  .container #gallery .gallery_ctr_3 .right_side img {
+    width: 90px;
+  }
+  .container #gallery .gallery_ctr_4 {
+    gap: 3px;
+  }
+  .container #gallery .gallery_ctr_4 img {
+    width: 90px;
+  }
+  .container #ourpartners .up_side {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .container #ourpartners .up_side .title {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #ourpartners .up_side .description {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #ourpartners .down_side {
+    grid-template-columns: none;
+  }
+  .container #ourteam .up_side .title_orange {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #ourteam .up_side .title {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 56px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #ourteam .up_side .description {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 16px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .container #ourteam .down_side {
+    flex-direction: column;
+  }
+  .container .footer_ctr {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .container .footer_ctr .left_side {
+    width: 100%;
+  }
+  .container .footer_ctr .left_side img {
+    width: 216px;
+  }
+  .container .footer_ctr .left_side .title {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 100%;
+    letter-spacing: 0%;
+  }
+  .container .footer_ctr .left_side .description {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0%;
+  }
+  .container .footer_ctr .right_side .up_side {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=landing_page.css.map */
