--- a/templates/css/landing_page.scss
+++ b/templates/css/landing_page.scss
@@ -143,7 +143,12 @@ a {
 
     .tailored_ctr {
       padding-top: 100px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
       .up_side {
+        width: 800px;
         text-align: center;
 
         .title {
