--- a/templates/index.html
+++ b/templates/index.html
@@ -251,10 +251,10 @@
           <img src="images/logo_bincigar.png" alt="" />
           <img src="images/logo_apex.png" alt="" />
           <img src="images/logo_jbrn.png" alt="" />
-          <img src="images/logo_athan.png" alt="" />
-          <img src="images/logo_wave.png" alt="" />
-          <img src="images/logo_kafe.png" alt="" />
-          <img src="images/logo_ekspor.png" alt="" />
+          <img src="images/logo_athan.jpg" alt="" />
+          <img src="images/logo_wave.jpg" alt="" />
+          <img src="images/logo_kafe.jpg" alt="" />
+          <img src="images/logo_ekspor.jpg" alt="" />
         </div>
       </section>
 
@@ -268,10 +268,46 @@
           </p>
         </div>
         <div class="down_side">
-          <div class="card_ctr">TEAM</div>
-          <div class="card_ctr">TEAM</div>
-          <div class="card_ctr">TEAM</div>
-          <div class="card_ctr">TEAM</div>
+          <div class="card_ctr">
+            <div class="bg"></div>
+            <div class="img_ctr">
+              <img src="images/tito.jpg" alt="" />
+            </div>
+            <div class="profile_ctr">
+              <p class="name">TITO ALIAZHAR S.M.</p>
+              <p class="job">Director</p>
+            </div>
+          </div>
+          <div class="card_ctr">
+            <div class="bg"></div>
+            <div class="img_ctr">
+              <img src="images/arga.jpg" alt="" />
+            </div>
+            <div class="profile_ctr">
+              <p class="name">MUHAMMAD ARGA KUSUMAH BBS</p>
+              <p class="job">Managing Director</p>
+            </div>
+          </div>
+          <div class="card_ctr">
+            <div class="bg"></div>
+            <div class="img_ctr">
+              <img src="images/dede.jpg" alt="" />
+            </div>
+            <div class="profile_ctr">
+              <p class="name">DEDE HERAWAN</p>
+              <p class="job">Supply Chain Director</p>
+            </div>
+          </div>
+          <div class="card_ctr">
+            <div class="bg"></div>
+            <div class="img_ctr">
+              <img src="images/alfan.jpg" alt="" />
+            </div>
+            <div class="profile_ctr">
+              <p class="name">ALFAN ATHARIK S.M.</p>
+              <p class="job">Partnership Director</p>
+            </div>
+          </div>
         </div>
       </section>
 
