--- a/templates/css/landing_page.scss
+++ b/templates/css/landing_page.scss
@@ -606,6 +606,7 @@ a {
         justify-content: center;
 
         .bg {
+          display: none;
           position: absolute;
           top: 0;
           left: 0;
@@ -841,8 +842,8 @@ a {
 
       .tailored_ctr {
         .up_side {
-          padding-left: 70px;
-          padding-right: 70px;
+          width: 100%;
+          padding: 0 20px;
           .title {
             font-family: Poppins;
             font-weight: 700;
