--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,14 @@
         /></a>
         <div class="right_side" id="sidebar">
           <a href="#">Home</a>
-          <a href="#aboutUs">Abous Us</a>
+          <a href="#aboutUs">About Us</a>
           <a href="#whytdm">Why TDM?</a>
           <a href="#gallery">Gallery</a>
           <a href="#ourpartners">Our Partnerships</a>
           <a href="#ourteam">Our Team</a>
-          <button>Contact Us</button>
+          <a href="mailto:treedayamakmur@gmail.com" class="contact-button"
+            >Contact Us</a
+          >
         </div>
       </header>
 
@@ -39,7 +41,7 @@
 
         <div class="bridge_ctr">
           <div class="left_side">
-            <img class="bridge_img" src="images/bridge_img.png" alt="people" />
+            <img class="bridge_img" src="images/bridge_img.jpg" alt="people" />
           </div>
           <div class="right_side">
             <h2 class="title">Your Bridge to Global Opportunity</h2>
@@ -270,40 +272,40 @@
         <div class="down_side">
           <div class="card_ctr">
             <div class="bg"></div>
-            <div class="img_ctr">
+            <div class="img_ctr tito">
               <img src="images/tito.jpg" alt="" />
             </div>
-            <div class="profile_ctr">
+            <div class="profile_ctr tito">
               <p class="name">TITO ALIAZHAR S.M.</p>
               <p class="job">Director</p>
             </div>
           </div>
           <div class="card_ctr">
             <div class="bg"></div>
-            <div class="img_ctr">
+            <div class="img_ctr arga">
               <img src="images/arga.jpg" alt="" />
             </div>
-            <div class="profile_ctr">
+            <div class="profile_ctr arga">
               <p class="name">MUHAMMAD ARGA KUSUMAH BBS</p>
               <p class="job">Managing Director</p>
             </div>
           </div>
           <div class="card_ctr">
             <div class="bg"></div>
-            <div class="img_ctr">
+            <div class="img_ctr dede">
               <img src="images/dede.jpg" alt="" />
             </div>
-            <div class="profile_ctr">
+            <div class="profile_ctr dede">
               <p class="name">DEDE HERAWAN</p>
               <p class="job">Supply Chain Director</p>
             </div>
           </div>
           <div class="card_ctr">
             <div class="bg"></div>
-            <div class="img_ctr">
+            <div class="img_ctr alfan">
               <img src="images/alfan.jpg" alt="" />
             </div>
-            <div class="profile_ctr">
+            <div class="profile_ctr alfan">
               <p class="name">ALFAN ATHARIK S.M.</p>
               <p class="job">Partnership Director</p>
             </div>
