add sosmed footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -339,9 +339,18 @@
             <div class="right">
               <p class="title">FOLLOW US</p>
               <div class="medsos_ctr">
-                <img src="images/logo_instagram.png" alt="" />
-                <img src="images/logo_whatsapp.png" alt="" />
-                <img src="images/logo_facebook.png" alt="" />
+                <a href="#" target="_blank">
+                  <img src="images/logo_instagram.png" alt="Instagram" />
+                </a>
+                <a href="https://wa.me/306945727892" target="_blank">
+                  <img src="images/logo_whatsapp.png" alt="WhatsApp" />
+                </a>
+                <a
+                  href="https://www.facebook.com/tdmindonesia/"
+                  target="_blank"
+                >
+                  <img src="images/logo_facebook.png" alt="Facebook" />
+                </a>
               </div>
             </div>
           </div>
