style: change styling for profile and add logo for responsive

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,11 @@
                   From Sumatra’s coffee beans to Javanese batik, we deliver
                   Indonesia to the world.
                 </p>
+                <img
+                  src="images/logo_bulat.png"
+                  class="logo-inline"
+                  alt="logo bulat"
+                />
               </div>
               <div class="benefits_ctr">
                 <p class="title">LOGISTICS, SIMPLIFIED</p>
@@ -80,6 +85,11 @@
                   Customs, shipping, storage and warehousing —handled with
                   precision, consider it done.
                 </p>
+                <img
+                  src="images/logo_bulat.png"
+                  class="logo-inline"
+                  alt="logo bulat"
+                />
               </div>
             </div>
             <div class="right_side">
@@ -89,6 +99,11 @@
                   Whether it’s machinery or materials, we source globally so you
                   can focus locally.
                 </p>
+                <img
+                  src="images/logo_bulat.png"
+                  class="logo-inline"
+                  alt="logo bulat"
+                />
               </div>
               <div class="benefits_ctr">
                 <p class="title">INSIGHTS THAT INSPIRE</p>
@@ -96,6 +111,11 @@
                   We’ll keep you ahead of the curve with market trends and
                   regulations you can act on.
                 </p>
+                <img
+                  src="images/logo_bulat.png"
+                  class="logo-inline"
+                  alt="logo bulat"
+                />
               </div>
             </div>
           </div>
