--- a/templates/css/landing_page.css
+++ b/templates/css/landing_page.css
@@ -166,6 +166,9 @@ a {
   width: 280px;
   padding-bottom: 40px;
 }
+.container #aboutUs .tailored_ctr .down_side .benefits_ctr .logo-inline {
+  display: none;
+}
 .container #aboutUs .tailored_ctr .down_side .benefits_ctr .title {
   font-family: Poppins;
   font-weight: 700;
@@ -526,10 +529,6 @@ a {
 }
 .container #ourteam .down_side .card_ctr {
   position: relative;
-  width: 276px;
-  height: 370px;
-  border: 1px solid #d9d9d9;
-  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -546,11 +545,12 @@ a {
   z-index: -9;
 }
 .container #ourteam .down_side .card_ctr .img_ctr {
-  position: absolute;
+  width: 276px;
+  height: 370px;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 300px;
   overflow: hidden;
 }
 .container #ourteam .down_side .card_ctr .img_ctr img {
@@ -561,10 +561,6 @@ a {
 }
 .container #ourteam .down_side .card_ctr .profile_ctr {
   width: 100%;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
   text-align: center;
 }
 .container #ourteam .down_side .card_ctr .profile_ctr.arga .name {
@@ -577,6 +573,8 @@ a {
   line-height: 20px;
   letter-spacing: 0%;
   text-align: center;
+  color: #1e3881;
+  padding-top: 10px;
 }
 .container #ourteam .down_side .card_ctr .profile_ctr .job {
   font-family: Poppins;
@@ -767,7 +765,14 @@ a {
     gap: 25px;
   }
   .container #aboutUs .tailored_ctr .down_side .left_side .benefits_ctr {
+    padding-bottom: 0;
     width: 201px;
+  }
+  .container #aboutUs .tailored_ctr .down_side .left_side .benefits_ctr .logo-inline {
+    display: block;
+    margin: auto;
+    width: 40px;
+    height: 40px;
   }
   .container #aboutUs .tailored_ctr .down_side .left_side .benefits_ctr .title {
     font-family: Poppins;
@@ -786,7 +791,14 @@ a {
     text-align: center;
   }
   .container #aboutUs .tailored_ctr .down_side .right_side .benefits_ctr {
+    padding-bottom: 0;
     width: 201px;
+  }
+  .container #aboutUs .tailored_ctr .down_side .right_side .benefits_ctr .logo-inline {
+    display: block;
+    margin: auto;
+    width: 40px;
+    height: 40px;
   }
   .container #aboutUs .tailored_ctr .down_side .right_side .benefits_ctr .title {
     font-family: Poppins;
