--- a/templates/css/landing_page.scss
+++ b/templates/css/landing_page.scss
@@ -199,6 +199,10 @@ a {
           width: 280px;
           padding-bottom: 40px;
 
+          .logo-inline {
+            display: none;
+          }
+
           .title {
             font-family: Poppins;
             font-weight: 700;
@@ -613,10 +617,7 @@ a {
 
       .card_ctr {
         position: relative;
-        width: 276px;
-        height: 370px;
-        border: 1px solid #d9d9d9;
-        border-radius: 5px;
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -634,11 +635,13 @@ a {
         }
 
         .img_ctr {
-          position: absolute;
+          width: 276px;
+          height: 370px;
+          border: 1px solid #d9d9d9;
+          border-radius: 5px;
           top: 0;
           left: 0;
-          width: 100%;
-          height: 300px;
+
           // border-radius: 100%;
           overflow: hidden;
 
@@ -652,10 +655,7 @@ a {
 
         .profile_ctr {
           width: 100%;
-          position: absolute;
-          bottom: 10px;
-          left: 50%;
-          transform: translateX(-50%);
+
           text-align: center;
 
           &.arga {
@@ -671,6 +671,8 @@ a {
             line-height: 20px;
             letter-spacing: 0%;
             text-align: center;
+            color: #1e3881;
+            padding-top: 10px;
           }
 
           .job {
@@ -904,7 +906,15 @@ a {
           gap: 25px;
           .left_side {
             .benefits_ctr {
+              padding-bottom: 0;
               width: 201px;
+
+              .logo-inline {
+                display: block;
+                margin: auto;
+                width: 40px;
+                height: 40px;
+              }
               .title {
                 font-family: Poppins;
                 font-weight: 700;
@@ -926,7 +936,15 @@ a {
           }
           .right_side {
             .benefits_ctr {
+              padding-bottom: 0;
               width: 201px;
+
+              .logo-inline {
+                display: block;
+                margin: auto;
+                width: 40px;
+                height: 40px;
+              }
               .title {
                 font-family: Poppins;
                 font-weight: 700;
