--- a/templates/css/landing_page.css
+++ b/templates/css/landing_page.css
@@ -167,7 +167,10 @@ a {
   padding-bottom: 40px;
 }
 .container #aboutUs .tailored_ctr .down_side .benefits_ctr .logo-inline {
-  display: none;
+  display: block;
+  margin: auto;
+  width: 40px;
+  height: 40px;
 }
 .container #aboutUs .tailored_ctr .down_side .benefits_ctr .title {
   font-family: Poppins;
@@ -206,8 +209,6 @@ a {
   width: 50%;
   background-color: white;
   border-radius: 5px;
-  border: 1px solid #d9d9d9;
-  box-shadow: 5px 5px 5px 5px #888888;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -241,8 +242,6 @@ a {
   width: 50%;
   background-color: white;
   border-radius: 5px;
-  border: 1px solid #d9d9d9;
-  box-shadow: 5px 5px 5px 5px #888888;
   display: flex;
   flex-direction: column;
   justify-content: center;
